<resources>
    <string name="app_name">FFood Android</string>
    <string name="title_welcome">Đăng ký</string>
    <dimen name="min_button_width">120dp</dimen>
    <dimen name="min_button_height">64dp</dimen>
    <dimen name="button_padding">16dp</dimen>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order_history">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">Log in</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="hint_password">Enter password…</string>
    <string name="prompt_signup">Haven\'t got an account yet?</string>
    <string name="link_signup"> Sign up here</string>
</resources>